cleanup for unnecessary lombok annotation